my first commit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div>
-			Check this out!
+			Check this out! codecademy.com
 			<p>hey</p>
 			<p>these are</p>
 			<p>paragraphs</p>
